fix overflowing input

--- a/src/components/pages/contact/contact.scss
+++ b/src/components/pages/contact/contact.scss
@@ -38,6 +38,10 @@
   textarea {
     width: 100%;
   }
+
+  input[name="bdaySurprise"] {
+    width: auto;
+  }
 }
 
 .errorText,
